fix not wrapping classes

--- a/src/components/Event/EventGrid/styles.module.scss
+++ b/src/components/Event/EventGrid/styles.module.scss
@@ -164,6 +164,7 @@
     align-items: baseline;
     flex-wrap: wrap;
     max-width: 12em;
+    flex-basis: 12em;
     overflow-x: auto;
     &.collapsed {
         flex-wrap: nowrap;
